<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.franjo.android.bakingapp.ui.StepDetailFragment">


        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/mPlayerView"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >


        </com.google.android.exoplayer2.ui.SimpleExoPlayerView>


        <ImageView
            android:id="@+id/thumbImage"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/no_video_image"
            android:adjustViewBounds="true"
            tools:targetApi="lollipop" />

        <android.support.v7.widget.CardView
            android:id="@+id/cvStepsDescription"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mPlayerView" >

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:textSize="14sp"
                android:fontFamily="monospace"
                android:textStyle="bold"
                tools:text="Description" />

        </android.support.v7.widget.CardView>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/btnPrevious"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/list_item_selector"
                android:contentDescription="@string/previousvideobutton"
                android:focusable="true"
                android:text="@string/previous"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnNext"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/list_item_selector"
                android:contentDescription="@string/nextvideobutton"
                android:focusable="true"
                android:text="@string/next"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</ScrollView>
